Changelog
=========

4.3.4 (unreleased)
------------------

- OPAC search: Fixes for results box. #FLOW-328


4.3.3 (2018-12-12)
------------------

- Fixed margins of search results. #REC-985
- Author Search: Added links to other portals. #REC-988
- Author Search: Only show "and comments" if commenting enabled. #REC-987
- Author Search: Fixed unicode error. #REC-1004
- Fixed first heading in firefox. #REC-993
- Custom text for topic browsing. #REC-986
- Advanced Search: Fixed sorting of ddc values. #REC-983


4.3.2 (2018-06-05)
------------------

- Publications view: Also use paths instead of URLs for existing logos. #16548


4.3.1 (2018-05-25)
------------------

- Only show document byline to users with edit permission. Refs #16920
- Moved "Datenschutz" link to footer. Refs #17066
- Fixed links on publications view and homepage being cached in context of
  wrong portal. Refs #16548
- Redirect to the correct portal. Refs #16548
- Publication RSS feed: Show portal title. Filter for review types.
  Refs #17151


4.3.0 (2018-03-05)
------------------

Fixed:

- Advanced search is accessible as anonymous.
  Technical: registry.get() was throwing Unauthorized. Refs #16173
  [reinhardt]
- Make sure navigation does not float. Refs #16289
  [reinhardt]
- Firefox: Make sure first heading in document does not float. Refs #16289
  [reinhardt]
- Participating journals: Links don't jump between portals.
  Technical: Use full absolute_url in getPublications(). Refs #16175
  [reinhardt]

Changed:

- Metadata accordion: removed GIFs; added styling for SVGs. Refs #16175
  [reinhardt]
- Homepage View: Allowed overriding review languages. Refs #16527
  [reinhardt]



4.2.2 (2018-01-18)
------------------

- Added social media buttons. Refs #16159
  [reinhardt]
- Replaced FontAwesome characters with inline SVGs. Refs #16405
  [reinhardt]


4.2.1 (2017-11-16)
------------------

- External full text: adjusted padding. Refs #16044
  [reinhardt]